# ai_agents

./: .gitignore  README.md  pyproject.toml
pydantic_ai/: __init__.py
pydantic_ai/models/: gemini.py
simple_projects/coder/: advanced_coder.py  main.py  main_with_sep_py_interpreter.py  models.py  simple_coder.py
simple_projects/filemanager/: main.py  models.py  utilities.py
tests/instructor_tests/: token_costs.py
tests/pydantic_ai_tests/: notes.md  test_pydantic_ai.py  test_pydantic_ai_1.py  test_pydantic_ai_2.py  test_pydantic_ai_rag_3.py
